# tutorial-rust-gpu

./: Cargo.toml  README.md  build.rs
compare_cuda/: CMakeLists.txt  va.cu
libva/: CMakeLists.txt  bindgen.sh  va.cu  va.h
src/: bindgen.sh  main.rs  va_bindings.rs
